--- a/css/styles.css
+++ b/css/styles.css
@@ -326,7 +326,7 @@ display: flex;
   top: 50%;
   left: 50%;
   transform: translate(-50%,-50%);
-  padding: 15px;
+  /* padding: 15px; */
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   
@@ -371,12 +371,92 @@ textarea{
 }
 
 .modal-form{
-  margin-bottom: 28px;
+  margin-bottom: 10px;
   display: flex;
   flex-direction: column;
   text-align: left;
-  
+  position: relative;
 }
+.modal-type{
+  border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    height: 40px;
+    padding-left: 42px;
+}
+.comment-type{
+  height: 120px;
+  margin-bottom: 10px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  
+    
+   
+}
+.modal-text{
+  margin-bottom: 4px;
+    font-size: 12px;
+    line-height: 1.16;
+    letter-spacing: 0.01em;
+    color: #757575;
+}
+.modal-check{
+    font-size: 14px;
+    line-height: 1.71;
+    color: #757575;
+}
+.modal-btn-type{
+    font-family: inherit;
+      font-weight: 700;
+      font-size: 16px;
+      line-height: 1.87;
+      align-items: center;
+      text-align: center;
+      letter-spacing: 0.06em;
+      border-radius: 4px;
+      border: 0px;
+      margin-top: 30px;
+      padding-left: 32px;
+      padding-right: 32px;
+      padding-top: 10px;
+      padding-bottom: 10px;
+     width: 200px;
+      color: var(--background-color);
+      background-color: var(--accent-color);
+    
+      transition-property: background-color;
+      transition-duration: 250ms;
+      transition-timing-function: var(--cubik);
+    }
+.modal-btn-type:hover,
+.modal-btn-type:focus {
+  background-color: var(--hover-focus-btn);
+}
+.modal-link{
+  color: var(--accent-color);
+}
+.modal-item{
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  top: 18px;
+  width: 40px;
+  height: 40px;
+ /* color: var(--title-text-color); */
+ 
+}
+.modal-svg{
+  width: 13px;
+  height: 13px;
+  fill: currentColor;
+}
+.modal-type:hover,
+.modal-type:focus{
+  border-color: var(--accent-color);
+  color: var(--accent-color);
+  fill: var(--accent-color);
+}
+
 
 /* <==================================/Modal=================================> */
 /* <======================/HERO==========================> */
@@ -511,9 +591,6 @@ transition:  transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   margin-right: 30px;
 }
 .team-box-color {
-  
-  /* border-radius: 0px 0px 4px 4px;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);; */
   padding-bottom: 30px;
   padding-top: 30px;
 }
@@ -748,7 +825,6 @@ margin-right: 10px;}
   align-items: center;
   width: 170px;
   height: 92px;
-  /* background-color: var(--background-color); */
   color: var(--icon-color);
   border: 1px solid var(--icon-color);
   border-radius: 4px;
