--- a/css/styles.css
+++ b/css/styles.css
@@ -7,8 +7,8 @@
   --perfuse-color: #f5f4fa;
   --head-logo: #000000;
   --background-hero: #2f303a;
-  --icon-color:#AFB1B8;
-  --portfolio-img: #EEEEEE;
+  --icon-color: #afb1b8;
+  --portfolio-img: #eeeeee;
   --cubik: cubic-bezier(0.4, 0, 0.2, 1);
 }
 body {
@@ -67,15 +67,14 @@ button {
   padding-right: 15px;
 }
 
-
 /* <======================COMPONENTS==========================> */
 .pages-header {
   position: fixed;
   width: 100%;
   top: 0;
   z-index: 1;
-   padding-top: 24px;
-  padding-bottom: 24px; 
+  padding-top: 24px;
+  padding-bottom: 24px;
   border-bottom: 1px solid #ececec;
   max-height: 80px;
   background: var(--background-color);
@@ -121,7 +120,7 @@ button {
   line-height: 1.38;
   color: var(--accent-color);
 }
-.menu-link{
+.menu-link {
   font-weight: 500;
   line-height: 1.14;
   letter-spacing: 0.02em;
@@ -154,8 +153,8 @@ button {
   font-weight: 500;
   line-height: 1.14;
   letter-spacing: 0.02em;
-display: flex;
-align-items: center;
+  display: flex;
+  align-items: center;
   color: var(--primery-text-color);
   transition-property: color;
   transition-duration: 250ms;
@@ -172,7 +171,7 @@ align-items: center;
   font-weight: 500;
   line-height: 1.14;
   letter-spacing: 0.02em;
-display: flex;
+  display: flex;
   align-items: center;
   color: var(--primery-text-color);
   transition-property: color;
@@ -200,7 +199,7 @@ display: flex;
   padding-right: 22px;
   padding-top: 6px;
   padding-bottom: 6px;
-  transition-property:color,background-color,box-shadow;
+  transition-property: color, background-color, box-shadow;
   transition-duration: 250ms;
   transition-timing-function: var(--cubik);
 }
@@ -208,7 +207,8 @@ display: flex;
 .portfolio-btn:focus {
   color: var(--background-color);
   background-color: var(--accent-color);
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 .caption-text {
   font-family: 'Roboto', sans-serif;
@@ -226,15 +226,15 @@ display: flex;
   line-height: 1.87;
   color: var(--primery-text-color);
 }
-.menu-item > .current::before{
+.menu-item > .current::before {
   content: '';
-    width: 100%;
-    height: 4px;
-    position: absolute;
-    transform: translateY(30px);
-    bottom: 0;
-    background: var(--accent-color);
-    border-radius: 2px;
+  width: 100%;
+  height: 4px;
+  position: absolute;
+  transform: translateY(30px);
+  bottom: 0;
+  background: var(--accent-color);
+  border-radius: 2px;
 }
 /* <======================/HEADER==========================>  */
 /* <======================HERO==========================> */
@@ -282,8 +282,6 @@ display: flex;
 .hero-btn:hover,
 .hero-btn:focus {
   background-color: var(--hover-focus-btn);
-  
-  
 }
 .visually-hidden {
   position: absolute;
@@ -298,7 +296,7 @@ display: flex;
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
-.backdrop{
+.backdrop {
   position: fixed;
   top: 0;
   left: 0;
@@ -306,32 +304,29 @@ display: flex;
   height: 100%;
   z-index: 1;
   background: rgba(0, 0, 0, 0.2);
-  transition-property: opacity 1;
+  transition-property: opacity;
   transition-duration: 250ms;
   transition-timing-function: var(--cubik);
- 
 }
 
-.backdrop.is-hidden{
+.backdrop.is-hidden {
   opacity: 0;
   pointer-events: none;
-  
 }
 /* <==================================Modal=================================> */
-.modal{
-  width: 528px ;
+.modal {
+  width: 528px;
   height: 581px;
   background-color: var(--background-color);
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%,-50%);
-  /* padding: 15px; */
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  transform: translate(-50%, -50%);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
-  
 }
-.modal-btn{
+.modal-btn-close {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -345,96 +340,124 @@ display: flex;
   background: var(--basic-white-color);
   border: 1px solid rgba(0, 0, 0, 0.1);
 }
-.close-icon{
+.close-icon {
   background-image: url(../images/close.svg);
   background-repeat: no-repeat;
   background-position: center;
+  transition-duration: 250ms;
+  transition-timing-function: var(--cubik);
 }
-.modal-container{
+.close-icon:hover,
+.close-icon:focus {
+  background-image: url(../images/icon-close-hover.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  transition-duration: 250ms;
+  transition-timing-function: var(--cubik);
+}
+
+.modal-container {
   width: 448px;
   margin-left: auto;
   margin-right: auto;
   padding-top: 40px;
-  
 }
-.modal-header{
-font-style: normal;
-font-weight: 700;
-font-size: 20px;
-line-height: 1.15;
-text-align: center;
-color: #212121;
-margin-bottom: 12px;
-}
-textarea{
-  resize: none;
+.modal-header {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15;
+  text-align: center;
+  color: #212121;
+  margin-bottom: 12px;
 }
 
-.modal-form{
+.modal-form {
   margin-bottom: 10px;
   display: flex;
   flex-direction: column;
   text-align: left;
   position: relative;
 }
-.modal-type{
+.modal-type {
   border: 1px solid rgba(33, 33, 33, 0.2);
-    border-radius: 4px;
-    height: 40px;
-    padding-left: 42px;
+  border-radius: 4px;
+  height: 40px;
+  padding-left: 42px;
+  outline: none;
+  transition-property: border-color;
+  transition-duration: 250ms;
+  transition-timing-function: var(--cubik);
 }
-.comment-type{
+.comment-type {
   height: 120px;
   margin-bottom: 10px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
-  
-    
-   
+  padding: 15px;
+  outline: none;
+  transition-property: border-color;
+  transition-duration: 250ms;
+  transition-timing-function: var(--cubik);
 }
-.modal-text{
+.comment-type::placeholder {
+  /* padding: 12px 1px; */
+  color: rgba(117, 117, 117, 0.5);
+}
+textarea {
+  resize: none;
+}
+.modal-text {
   margin-bottom: 4px;
-    font-size: 12px;
-    line-height: 1.16;
-    letter-spacing: 0.01em;
-    color: #757575;
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.01em;
+  color: #757575;
 }
-.modal-check{
-    font-size: 14px;
-    line-height: 1.71;
-    color: #757575;
+.comment-type:focus {
+  border-color: var(--accent-color);
 }
-.modal-btn-type{
-    font-family: inherit;
-      font-weight: 700;
-      font-size: 16px;
-      line-height: 1.87;
-      align-items: center;
-      text-align: center;
-      letter-spacing: 0.06em;
-      border-radius: 4px;
-      border: 0px;
-      margin-top: 30px;
-      padding-left: 32px;
-      padding-right: 32px;
-      padding-top: 10px;
-      padding-bottom: 10px;
-     width: 200px;
-      color: var(--background-color);
-      background-color: var(--accent-color);
-    
-      transition-property: background-color;
-      transition-duration: 250ms;
-      transition-timing-function: var(--cubik);
-    }
+.modal-type:focus {
+  border-color: var(--accent-color);
+}
+.modal-check {
+  font-size: 14px;
+  line-height: 1.71;
+  color: #757575;
+  padding-left: 20px;
+}
+.modal-btn-type {
+  margin-left: 115px;
+  font-family: inherit;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.06em;
+  border-radius: 4px;
+  border: 0px;
+  margin-top: 30px;
+  padding-left: 32px;
+  padding-right: 32px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  width: 200px;
+  color: var(--background-color);
+  background-color: var(--accent-color);
+
+  transition-property: background-color;
+  transition-duration: 250ms;
+  transition-timing-function: var(--cubik);
+}
 .modal-btn-type:hover,
 .modal-btn-type:focus {
   background-color: var(--hover-focus-btn);
 }
-.modal-link{
+.modal-link {
   color: var(--accent-color);
 }
-.modal-item{
+.modal-item {
   position: absolute;
   display: flex;
   align-items: center;
@@ -442,22 +465,35 @@ textarea{
   top: 18px;
   width: 40px;
   height: 40px;
- /* color: var(--title-text-color); */
- 
 }
-.modal-svg{
+.modal-svg {
   width: 13px;
   height: 13px;
-  fill: currentColor;
+  fill: var(--title-text-color);
 }
-.modal-type:hover,
-.modal-type:focus{
-  border-color: var(--accent-color);
-  color: var(--accent-color);
+.modal-type:focus + .modal-svg {
   fill: var(--accent-color);
 }
 
-
+.modal-check::before {
+  position: absolute;
+  display: block;
+  border: 1px solid var(--title-text-color);
+  border-radius: 2px;
+  content: '';
+  top: 440px;
+  left: 37px;
+  width: 16px;
+  height: 15px;
+  cursor: pointer;
+}
+.modal-form-check:checked + .modal-check::before {
+  background-image: url(../images/icon-check.svg);
+  border-color: var(--accent-color);
+}
+.modal-form-check:focus + .modal-check::before {
+  outline: 2px solid var(--accent-color);
+}
 /* <==================================/Modal=================================> */
 /* <======================/HERO==========================> */
 /* <======================Benefits==========================> */
@@ -467,7 +503,7 @@ textarea{
   line-height: 1.14;
   text-transform: uppercase;
   margin-bottom: 10px;
-margin-top: 30px;
+  margin-top: 30px;
   color: var(--title-text-color);
 }
 .rubric {
@@ -515,43 +551,36 @@ margin-top: 30px;
 .stud-size:not(:last-child) {
   margin-right: 30px;
 }
-.stud-size{
+.stud-size {
   position: relative;
   overflow: hidden;
- 
 }
 .stud-made:hover .stud-text,
 .stud-made:focus .stud-text {
   transform: translateY(-100%);
 }
 
-
-
-
-.stud-text{
-position: absolute;
-display: flex;
-align-items: center;
-justify-content: center;
-width: 100%;
-height: 70px;
-top: 100%;
-font-weight: 700;
-line-height: 16px;
-text-align: center;
-text-transform: uppercase;
-color: var(--background-color);
-background: rgba(47, 48, 58, 0.8);
-transition:  transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+.stud-text {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 70px;
+  top: 100%;
+  font-weight: 700;
+  line-height: 16px;
+  text-align: center;
+  text-transform: uppercase;
+  color: var(--background-color);
+  background: rgba(47, 48, 58, 0.8);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-
 
 /* <======================/STUDIES==========================> */
 /* <======================TEAMS==========================> */
 .perfuse {
   background-color: var(--perfuse-color);
-
 }
 .team {
   font-weight: 700;
@@ -585,7 +614,8 @@ transition:  transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   box-sizing: border-box;
   background-color: var(--background-color);
   border-radius: 0px 0px 4px 4px;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
 }
 .team-box-sizen:not(:last-child) {
   margin-right: 30px;
@@ -602,7 +632,7 @@ transition:  transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   line-height: 1.71;
 
   color: var(--background-color);
-  transition-property: color,;
+  transition-property: color;
   transition-duration: 250ms;
   transition-timing-function: var(--cubik);
 }
@@ -638,9 +668,78 @@ transition:  transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 .contact-footer:focus {
   color: var(--accent-color);
 }
+.subscrip {
+  margin-left: 93px;
+}
+.subscrip-title {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--background-color);
+  margin-bottom: 20px;
+}
+.footer-form {
+  /* border: 1px solid rgba(255, 255, 255, 0.3); */
+  /* filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15)); */
+  border-radius: 4px;
+  display: flex;
+}
+.subscrip-input {
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  background-color: var(--background-hero);
+  width: 358px;
+  height: 50px;
+  margin-right: 10px;
+  outline: none;
+  padding-left: 16px;
+  color: var(--background-color);
+}
+.subscrip-btn {
+  margin-left: 12px;
+  font-family: inherit;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.06em;
+  border-radius: 4px;
+  border: 0px;
+
+  padding-left: 32px;
+  padding-right: 32px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  width: 200px;
+  height: 50px;
+  color: var(--background-color);
+  background-color: var(--accent-color);
+
+  transition-property: background-color;
+  transition-duration: 250ms;
+  transition-timing-function: var(--cubik);
+}
+.subscrip-btn:hover,
+.subscrip-btn:focus {
+  background-color: var(--hover-focus-btn);
+}
+
+.subscrip-input::placeholder {
+  font-size: 16px;
+  line-height: 1.25;
+  display: flex;
+  align-items: center;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
+}
+
 /* <======================/FOOTER==========================> */
 /* <======================PORTFOLIO==========================> */
-.portfolio-cart{
+.portfolio-cart {
   position: relative;
   overflow: hidden;
 }
@@ -652,11 +751,10 @@ transition:  transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   justify-content: center;
 }
 
-.li-size{
+.li-size {
   position: relative;
-display: block;  
-overflow: hidden;
-
+  display: block;
+  overflow: hidden;
 }
 .context {
   position: absolute;
@@ -667,34 +765,28 @@ overflow: hidden;
   height: 294px;
   font-size: 18px;
   line-height: 1.55;
-  color: var(--background-color); 
+  color: var(--background-color);
   background-color: rgba(33, 150, 243, 0.9);
   transform: translateY(140%);
   transition-property: transform;
   transition-duration: 250ms;
   transition-timing-function: var(--cubik);
-  
- 
 }
 
 .li-size:hover .context,
-.li-size:focus .context{    
-transform: translateY(0);
-
-
+.li-size:focus .context {
+  transform: translateY(0);
 }
 .li-size:hover,
-.li-size:focus{
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+.li-size:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
-
 
 .portfolio-grid {
   display: flex;
   flex-wrap: wrap;
   gap: 30px;
-
-
 }
 
 .portfolio-img {
@@ -702,30 +794,22 @@ transform: translateY(0);
   border: 1px solid var(--portfolio-img);
   z-index: 2;
 
-/* <======================/PORTFOLIO==========================> */
-
-
-
- 
+  /* <======================/PORTFOLIO==========================> */
 }
-.bgd-img{
+.bgd-img {
   height: 600px;
   max-width: 1600px;
   margin-right: auto;
   margin-left: auto;
-  background-image: linear-gradient(
-    to right,
-    rgba(47, 48, 58, 0.4),
-    rgba(47, 48, 58, 0.4)
-  ), url(../images/fon.jpg);
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+    url(../images/fon.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  
 }
 .benefits-img::before {
   content: '';
-  display:block;
+  display: block;
   height: 120px;
   border-radius: 4px;
   background-color: var(--background-color);
@@ -737,69 +821,68 @@ transform: translateY(0);
   background-image: url(../images/antenna.svg);
   background-color: var(--perfuse-color);
 }
-.icon-clock::before{
+.icon-clock::before {
   background-image: url(../images/clock.svg);
   background-color: var(--perfuse-color);
 }
-.icon-diaram::before{
+.icon-diaram::before {
   background-image: url(../images/diagram.svg);
-background-color: var(--perfuse-color);
+  background-color: var(--perfuse-color);
 }
-.icon-astronaut::before{
+.icon-astronaut::before {
   background-image: url(../images/astronaut.svg);
-background-color: var(--perfuse-color);
+  background-color: var(--perfuse-color);
 }
-.icon-mail{
+.icon-mail {
   width: 16px;
   height: 12px;
   margin-right: 10px;
   fill: currentColor;
 }
-.icon-tel{
+.icon-tel {
   width: 10px;
   height: 16px;
   margin-right: 10px;
   fill: currentColor;
 }
-.social-links{
+.social-links {
   display: flex;
   justify-content: center;
   padding: 0;
   margin-top: 16px;
 }
 
-
-.social-link{
+.social-link {
   display: flex;
   justify-content: center;
   align-items: center;
   width: 44px;
   height: 44px;
   border-radius: 50%;
-  
+
   color: var(--icon-color);
-  transition-property: color,background-color;
+  transition-property: color, background-color;
   transition-duration: 250ms;
   transition-timing-function: var(--cubik);
 }
 
-.social-item:not(:last-child){
-margin-right: 10px;}
+.social-item:not(:last-child) {
+  margin-right: 10px;
+}
 
-.item{
+.item {
   width: 20px;
   height: 20px;
   fill: currentColor;
-  
 }
 
 .social-link:hover,
-.social-link:focus{
+.social-link:focus {
   background-color: var(--accent-color);
   color: var(--background-color);
 }
 
-.regular-customer{
+.regular-customer {
   padding-top: 94px;
   padding-bottom: 94px;
 }
@@ -811,15 +894,13 @@ margin-right: 10px;}
   text-align: center;
   color: var(--head-logo);
 }
-.regular-customer-list{
+.regular-customer-list {
   display: flex;
-  
 }
-.regular-customer-item:not(:last-child)
-{
+.regular-customer-item:not(:last-child) {
   margin-right: 30px;
 }
-.customer-btn{
+.customer-btn {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -828,74 +909,65 @@ margin-right: 10px;}
   color: var(--icon-color);
   border: 1px solid var(--icon-color);
   border-radius: 4px;
-  transition-property: color, border-color  ;
-    transition-duration: 250ms;
-    transition-timing-function: var(--cubik);
+  transition-property: color, border-color;
+  transition-duration: 250ms;
+  transition-timing-function: var(--cubik);
 }
-.customer-logo{
+.customer-logo {
   width: 106px;
   height: 60px;
   fill: currentColor;
-  
 }
 .customer-btn:hover,
-.customer-btn:focus{
+.customer-btn:focus {
   color: var(--accent-color);
   border-color: var(--accent-color);
 }
 
-.footer-dark-list{
-    margin-left: 70px;
-    
+.footer-dark-list {
+  margin-left: 70px;
 }
 
-.footer-flex{
+.footer-flex {
   display: flex;
   align-items: baseline;
 }
 
+.footer-tex {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  text-transform: uppercase;
 
-.footer-tex{
-
-font-weight: 700;
-font-size: 14px;
-line-height: 1.14;
-text-transform: uppercase;
-
-color: var(--background-color);
-
+  color: var(--background-color);
 }
 .social-item-distance:not(:last-child) {
   margin-right: 10px;
 }
-.social-item-footer{
+.social-item-footer {
   display: flex;
-    width: 44px;
-    height: 44px;
-    justify-content: center;
-      align-items: center;
-    border-radius: 50%;
-    background: rgba(255, 255, 255, 0.1);
-    color: var(--background-color);
-    transition-property:background-color;
+  width: 44px;
+  height: 44px;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  background: rgba(255, 255, 255, 0.1);
+  color: var(--background-color);
+  transition-property: background-color;
   transition-duration: 250ms;
   transition-timing-function: var(--cubik);
-
 }
 .social-item-footer:hover,
-.social-item-footer:focus{
+.social-item-footer:focus {
   color: var(--background-color);
   background-color: var(--accent-color);
-
 }
-.item-footer{
+.item-footer {
   width: 20px;
-    height: 20px;
-    fill: currentColor;
-    
+  height: 20px;
+  fill: currentColor;
 }
-.social-footer-links{
+.social-footer-links {
   display: flex;
   margin-top: 20px;
-  
 }
